crates/htui/tests/snapshots/secrets_settings__configured_health_ok.snap
---
source: crates/htui/tests/secrets_settings.rs
expression: "frame(&bench, &section)"
---
  Provider  infisical
  URL       stored · https://infisical.example.com
  Identity  stored
  Health    last check 14:02:11: server ok · login ok

  Projects
  vulkan-tutorials  no secret provider

  t logs in afresh: a refused login stops walks, chats and checks from logging in again until the
  identity is entered again



















e edit · c clear · t check · r reload · j/k rows
