crates/htui/tests/snapshots/secrets_settings__demo.snap
---
source: crates/htui/tests/secrets_settings.rs
expression: "frame(&bench, &section)"
---
  Provider  infisical
  URL       n/a in a demo session
  Identity  n/a in a demo session
  Health    n/a in a demo session

  Projects
  vulkan-tutorials  no secret provider






















e edit · c clear · t check · r reload · j/k rows
