crates/htui/tests/snapshots/secrets_settings__health_refused.snap
---
source: crates/htui/tests/secrets_settings.rs
expression: "frame(&bench, &section)"
---
  Provider  infisical
  URL       stored · https://infisical.example.com
  Identity  stored
  Health    last check 14:02:11: Infisical refused the machine identity's login: the client ID or
            client secret is wrong, expired or used up

  Projects
  vulkan-tutorials  no secret provider

  the last login was refused: walks, chats and checks are refused until the identity is entered
  again (e on Identity)


















e edit · c clear · t check · r reload · j/k rows
