crates/htui/tests/snapshots/secrets_settings__identity_form.snap
---
source: crates/htui/tests/secrets_settings.rs
expression: "frame(&bench, &section)"
---
  Provider  infisical
  URL       stored · https://infisical.example.com
  Identity  stored
  Health    not checked this session

  Projects
  vulkan-tutorials  no secret provider



















client ID:     cid-typed-1
client secret: ••••••••••••••••••••••••••••  (28)
the client secret is never shown; storing replaces both halves
Tab next field · Enter store · Esc cancel · the secret is never shown
