crates/htui/tests/snapshots/secrets_settings__not_configured.snap
---
source: crates/htui/tests/secrets_settings.rs
expression: "frame(&bench, &section)"
---
  Provider  infisical
  URL       not stored
  Identity  not stored
  Health    not checked this session

  Projects
  vulkan-tutorials  no secret provider






















e edit · c clear · t check · r reload · j/k rows
