crates/htui/tests/snapshots/secrets_settings__project_scope_checked.snap
---
source: crates/htui/tests/secrets_settings.rs
expression: "frame(&bench, &section)"
---
  Provider  infisical
  URL       stored · https://infisical.example.com
  Identity  stored
  Health    not checked this session

  Projects
  vulkan-tutorials  infisical · p-graphics · dev · /app · checked 14:03:05: 12 keys visible






















e edit · c clear · t check · r reload · j/k rows
