crates/htui/tests/snapshots/secrets_settings__write_mark_refused.snap
---
source: crates/htui/tests/secrets_settings.rs
expression: "frame(&bench, &section)"
---
  Provider  infisical
  URL       stored · https://infisical.example.com
  Identity  stored
  Health    not checked this session

  Projects
  vulkan-tutorials  no secret provider

  the keyring refused htui/infisical-write-mark: a running htui worker sees the last write only
  after a restart if it left the values unchanged (an identity entered again)



















identity stored; the next walk, chat or check logs in with it
